--- a/package.json
+++ b/package.json
@@ -1,24 +1,46 @@
 {
-  "name": "the-woofpack-frontend",
-  "version": "0.1.0",
+  "name": "bootSURE",
+  "version": "0.1.101",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open --https true",
     "build": "vue-cli-service build",
+    "build:staging": "vue-cli-service build --mode staging",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
+    "brace": "^0.11.1",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
+    "msal": "^1.4.6",
+    "papaparse": "^5.3.0",
+    "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
+    "vue-clipboard2": "^0.3.1",
+    "vue-content-loader": "^0.2.3",
+    "vue-resize": "^1.0.0",
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
+    "vuetify-confirm": "^2.0.6",
+    "vuetify-dialog": "^2.0.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.1.0",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
